--- a/analysis/analisis_y_normalizacion.ipynb
+++ b/analysis/analisis_y_normalizacion.ipynb
@@ -1971,19 +1971,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "28de20a3-aa96-4ac3-a26c-bd350d0a87f2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "55efae43-77c9-48ac-bb03-58836d2c95e8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['standard_deviation_e1', 'standard_deviation_e2',\n",
+       "       'standard_deviation_e3', 'standard_deviation_e4',\n",
+       "       'standard_deviation_e5', 'standard_deviation_e6',\n",
+       "       'standard_deviation_e7', 'standard_deviation_e8', 'root_mean_square_e1',\n",
+       "       'root_mean_square_e2', 'root_mean_square_e3', 'root_mean_square_e4',\n",
+       "       'root_mean_square_e5', 'root_mean_square_e6', 'root_mean_square_e7',\n",
+       "       'root_mean_square_e8', 'minimum_e1', 'minimum_e2', 'minimum_e3',\n",
+       "       'minimum_e4', 'minimum_e5', 'minimum_e6', 'minimum_e7', 'minimum_e8',\n",
+       "       'maximum_e1', 'maximum_e2', 'maximum_e3', 'maximum_e4', 'maximum_e5',\n",
+       "       'maximum_e6', 'maximum_e7', 'maximum_e8', 'zero_crossings_e1',\n",
+       "       'zero_crossings_e2', 'zero_crossings_e3', 'zero_crossings_e4',\n",
+       "       'zero_crossings_e5', 'zero_crossings_e6', 'zero_crossings_e7',\n",
+       "       'zero_crossings_e8', 'average_amplitude_change_e1',\n",
+       "       'average_amplitude_change_e2', 'average_amplitude_change_e3',\n",
+       "       'average_amplitude_change_e4', 'average_amplitude_change_e5',\n",
+       "       'average_amplitude_change_e6', 'average_amplitude_change_e7',\n",
+       "       'average_amplitude_change_e8', 'amplitude_first_burst_e1',\n",
+       "       'amplitude_first_burst_e2', 'amplitude_first_burst_e3',\n",
+       "       'amplitude_first_burst_e4', 'amplitude_first_burst_e5',\n",
+       "       'amplitude_first_burst_e6', 'amplitude_first_burst_e7',\n",
+       "       'amplitude_first_burst_e8', 'mean_absolute_value_e1',\n",
+       "       'mean_absolute_value_e2', 'mean_absolute_value_e3',\n",
+       "       'mean_absolute_value_e4', 'mean_absolute_value_e5',\n",
+       "       'mean_absolute_value_e6', 'mean_absolute_value_e7',\n",
+       "       'mean_absolute_value_e8', 'wave_form_length_e1', 'wave_form_length_e2',\n",
+       "       'wave_form_length_e3', 'wave_form_length_e4', 'wave_form_length_e5',\n",
+       "       'wave_form_length_e6', 'wave_form_length_e7', 'wave_form_length_e8',\n",
+       "       'willison_amplitude_e1', 'willison_amplitude_e2',\n",
+       "       'willison_amplitude_e3', 'willison_amplitude_e4',\n",
+       "       'willison_amplitude_e5', 'willison_amplitude_e6',\n",
+       "       'willison_amplitude_e7', 'willison_amplitude_e8', 'label', 'gesture',\n",
+       "       'gb_score'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = pd.read_csv(\"emg_normalized_labeled_score.csv\", keep_default_na=False)\n",
+    "a.columns"
+   ]
   },
   {
    "cell_type": "code",
